--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -6,6 +6,7 @@ html,
 body {
   margin: 0 !important;
   overflow: auto;
+  position: relative;
 
   a {
     color: $color-blue;
@@ -26,6 +27,10 @@ body {
 
 .w-100 {
   width: 100%;
+}
+
+ul {
+  margin: 0;
 }
 
 .p-card {
