updated client and employer dashboard

--- a/src/app/modules/client-dashboard/client-dashboard.component.html
+++ b/src/app/modules/client-dashboard/client-dashboard.component.html
@@ -22,9 +22,11 @@
     <p-menu styleClass="left-menu" [model]="leftMenuItems"></p-menu>
   </div>
 
-  <div class="content p-d-flex">
-    <div class="p-col-12">
-      <router-outlet></router-outlet>
+  <div class="content">
+    <div class="p-grid p-d-flex">
+      <div class="p-col-12">
+        <router-outlet></router-outlet>
+      </div>
     </div>
   </div>
 </div>
