--- a/src/app/modules/client-dashboard/pages/license-preview-dialog/license-preview-dialog.component.html
+++ b/src/app/modules/client-dashboard/pages/license-preview-dialog/license-preview-dialog.component.html
@@ -72,7 +72,7 @@
   </div>
 
   <div class="p-col-12 p-mt-3">
-    <h4 class="p-mt-0 bottom-bordered p-pb-2 p-mb-0">Localități:</h4>
+    <h4 class="p-mt-0 bottom-bordered p-pb-2 p-mb-0">Localități</h4>
   </div>
 
   <div class="p-col-12 p-d-flex p-flex-column">
