--- a/src/app/modules/client-dashboard/pages/new-request-dialog/new-request-dialog.component.html
+++ b/src/app/modules/client-dashboard/pages/new-request-dialog/new-request-dialog.component.html
@@ -172,7 +172,7 @@
       <input
         *ngIf="receivingMethod.receivingMethodId !== ReceivingMethods.SMS"
         formControlName="email"
-        type="text"
+        type="email"
         pInputText
       >
     </div>
