--- a/src/app/modules/employee-dashboard/employee-dashboard.component.html
+++ b/src/app/modules/employee-dashboard/employee-dashboard.component.html
@@ -22,7 +22,7 @@
     <p-menu styleClass="left-menu" [model]="leftMenuItems"></p-menu>
   </div>
 
-  <div class="content p-d-flex">
+  <div class="content p-grid p-d-flex">
     <div class="p-col-12">
       <router-outlet></router-outlet>
     </div>
