--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -22,5 +22,8 @@
 </div>
 
 <div class="home-container">
-
+  <div class="home-panel">
+    <h3 class="p-m-0">Abordări moderne <br> pentru o frontieră sigură</h3>
+    <p class="p-mb-0">Poliţia de Frontieră este organul administraţei publice din cadrul Ministerului Afacerilor Interne, care îşi exercită atribuţiile şi implementează politica statului în domeniul managementului integrat al frontierei de stat, prevenirea şi combaterea criminalităţii transfrontaliere.</p>
+  </div>
 </div>
