--- a/src/assets/styles/_typography.scss
+++ b/src/assets/styles/_typography.scss
@@ -3,7 +3,8 @@ html, body {
   font-size: 16px;
 }
 
-.p-component {
+.p-component,
+.p-inputtext {
   font-family: "Poppins", sans-serif !important;
 }
 
