--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -55,4 +55,28 @@
     //background-repeat: no-repeat;
     background-size: cover;
   }
+
+  .home-panel {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: rgba(30, 30, 30, 0.6);
+    padding: 50px;
+    max-width: 750px;
+    margin-left: 141px;
+    color: rgba(255, 255, 255, .8);
+
+    h3 {
+      font-size: 50px;
+      font-weight: bold;
+      font-family: "Roboto Condensed", sans-serif;
+      text-transform: uppercase;
+      padding-bottom: 20px;
+      border-bottom: 1px solid white;
+    }
+
+    p {
+      font-size: 20px;
+    }
+  }
 }
